[package]
name = "cubiomes-rs"
description = "cubiomes-rs."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/cubiomes-rs"
documentation = "https://docs.rs/cubiomes-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]

[dev-dependencies]
