[package]
name = "cubiomes-rs"
description = "cubiomes-rs."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/cubiomes-rs"
documentation = "https://docs.rs/cubiomes-rs"
license = "MIT"
readme = "README.md"
edition = "2021"
build = "build.rs"

[profile.release]
lto = "fat"

[dependencies]
num_cpus = "1.13.1"
rand = "0.8.4"
rand_xorshift = "0.3.0"

[dev-dependencies]

[build-dependencies]
cc = "1.0.72"
